samples/_failures_safe/1761281592_f44209_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f81507e4.c: In function ‘tokenize’:
./samples/SAFE/__tmp_f81507e4.c:168:13: error: expected declaration or statement at end of input
  168 |             token.value[1] = '\0';
      |             ^~~~~
./samples/SAFE/__tmp_f81507e4.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f81507e4.c:168:13: error: expected declaration or statement at end of input
